# tinyTerm

./: Cargo.toml  README.md  arch.txt  build.rs  build.sh
shell/: Cargo.toml  build.rs  build.sh
shell/src/: main.rs
src/: main.rs
src/graphics/: backend.rs
term/: Cargo.toml  build.sh
term/src/: main.rs
