[package]
name = "tinyTerm"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
# libtinyos = { git = "https://github.com/lmeller-git/libtinyos" }
# tinygraphics = { git = "https://github.com/lmeller-git/libtinyos" }
libtinyos = { path = "../libtinyos/libtinyos" }
tinygraphics = { path = "../libtinyos/tinygraphics" }

### ratatui + mousefood dependency versions copied from https://github.com/overdrivenpotato/rust-psp/blob/master/examples/ratatui/Cargo.toml, update if applicable
mousefood = { git = "https://github.com/j-g00da/mousefood", default-features = false, features = ["fonts", "framebuffer"] } #, rev = "1028ac24f83920fd95a5585a85ef943901ee63ac" }
ratatui = { version = "0.30.0-alpha.5", default-features = false }
###
conquer-once = { version = "0.4.0", default-features = false }
spin = "0.10.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
